fixed extra horizontal whitespace on firefox

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,11 @@ html {
     -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
 ::-webkit-scrollbar {
     display: none;
   }
